--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,10 @@ beautifulsoup4==4.14.2
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
+customtkinter==5.2.2
+darkdetect==0.8.0
 idna==3.11
+packaging==25.0
 python-qbittorrent==0.4.3
 requests==2.32.5
 soupsieve==2.8
