--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 altgraph==0.17.4
+attrs==25.4.0
 beautifulsoup4==4.14.2
 certifi==2025.10.5
 charset-normalizer==3.4.4
 click==8.3.0
 customtkinter==5.2.2
 darkdetect==0.8.0
+h11==0.16.0
 idna==3.11
+outcome==1.3.0.post0
 packaging==25.0
 pyinstaller==6.16.0
 pyinstaller-hooks-contrib==2025.9
@@ -15,10 +18,18 @@ PyQt6_sip==13.10.2
 PySide6==6.10.0
 PySide6_Addons==6.10.0
 PySide6_Essentials==6.10.0
+PySocks==1.7.1
 python-qbittorrent==0.4.3
 requests==2.32.5
+selenium==4.38.0
 setuptools==80.9.0
 shiboken6==6.10.0
+sniffio==1.3.1
+sortedcontainers==2.4.0
 soupsieve==2.8
+trio==0.32.0
+trio-websocket==0.12.2
 typing_extensions==4.15.0
 urllib3==2.5.0
+websocket-client==1.9.0
+wsproto==1.3.2
